# AutoAppOperation

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.txt
RFEHDataCollection/: ArduinoSerial.py  DataVisualization.py  LiveServer.py  README.md
RFEHDataCollection/web/: app.js  index.html  style.css
configs/: apps.yaml  device_app_overrides.yaml  devices.yaml  easy_abroad_apps.yaml  experiment_honor.yaml  experiment_matrix.yaml  experiment_music.yaml  experiment_news.yaml  experiment_shopping.yaml  experiment_social_media.yaml  experiment_video.yaml  scenarios.yaml
logs/runs/: facebook-feed-s10-samsung-galaxy-s10-facebook-android-facebook-feed-random-walk-20260614T114842306323Z.json  facebook-feed-s10-samsung-galaxy-s10-facebook-android-facebook-feed-random-walk-20260614T121456510841Z.json  instagram-feed-s10-samsung-galaxy-s10-instagram-android-instagram-feed-random-walk-20260614T114842305324Z.json  instagram-feed-s10-samsung-galaxy-s10-instagram-android-instagram-feed-random-walk-20260614T120344839496Z.json  pinterest-feed-s10-samsung-galaxy-s10-pinterest-android-pinterest-feed-random-walk-20260614T114842303323Z.json  pinterest-feed-s10-samsung-galaxy-s10-pinterest-android-pinterest-feed-random-walk-20260614T115844941788Z.json  pinterest-feed-s10-samsung-galaxy-s10-pinterest-android-pinterest-feed-random-walk-20260614T120011717228Z.json  (+27 more)
scripts/: check_android_device.sh  run_batch.py
src/appcollector.egg-info/: PKG-INFO  SOURCES.txt  (+2 more)
tests/: test_app_state.py  test_config.py  test_orchestrator_dry_run.py  test_randomizer.py  test_run_id.py
(+259 files in other folders)
